base: curation buttons layout fix
* Fixes minor layout issue causing buttons to not be properly right
  aligned.

--- a/zenodo/base/static/css/custom.css
+++ b/zenodo/base/static/css/custom.css
@@ -60,6 +60,12 @@ h4.repo {
   color: #000;
 }
 
+.cycle-well-row .row {
+  margin-bottom: 5px;
+}
+
+
+
 .rmlink {
   color: #000;
 }
